# mlcc_graph_poc

./: .claudeignore  .gitignore  Makefile  README.md  claude.md  pyproject.toml
config/: .env.example  .env.sample  golden_queries.yaml  queries.yaml
data/raw/: mlcc_catalog_rag_master_ko.md
docker/: docker-compose.yml
docs/: data_contract.md
docs/skills/mlcc-optimal-design-doe/references/: tool-contracts.md
pipeline/common/: __init__.py  age_client.py  extract_product_scope.py  fact_store.py  lightrag_bootstrap.py  llm_client.py  normalize.py  preprocess.py  query_router.py  sql_cypher_retriever.py
pipeline/graphify_to_lightrag/: bridge.py  kg_extractor.py  run_graphify.py  runner.py
pipeline/lightrag_only/: runner.py
pipeline/structured_first/: __init__.py  loader.py  runner.py
schema/: __init__.py  spec_schema.py
scripts/: run_pipeline_a.py  run_pipeline_b.py  run_pipeline_c.py
scripts/compare/: run_compare.py  score_answers.py
scripts/preprocess/: run_preprocess.py
sql/: init_age.sql  init_pgvector.sql
